SERVER-5428 re-arrange aquiring blocks so we know when we're waiting for a lock